crates/lattice-store-mongodb/tests/ui/document_set_default_conflict.stderr
error: MongoDocumentSet field accepts only one of #[mongo(skip)], #[mongo(default)], #[mongo(many)], #[mongo(lazy)], or #[mongo(lazy_unload = "...")]
 --> tests/ui/document_set_default_conflict.rs:6:5
  |
6 | /     #[mongo(default, many)]
7 | |     value: String,
  | |_________________^
