crates/lattice-store-mongodb/tests/ui/document_set_default_conflict.rs
use lattice_store_mongodb::MongoDocumentSet;

#[derive(MongoDocumentSet)]
#[mongo(id = u64)]
struct InvalidDocuments {
    #[mongo(default, many)]
    value: String,
}

fn main() {}
